--- a/.github/workflows/terrugrunt-plan.yml
+++ b/.github/workflows/terrugrunt-plan.yml
@@ -51,12 +51,13 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: plan
-      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.0.0
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
       with:
         environment: ${{ matrix.environments }}
         action: plan
         gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
         gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
+        account_id: "082372472775"
 
   plan-staging:
     runs-on: [ "self-hosted", "jamf-ubuntu-latest" ]
@@ -69,12 +70,13 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: plan
-      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.0.0
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
       with:
         environment: ${{ matrix.environments }}
         action: plan
         gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
         gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
+        account_id: "851725295329"
 
   plan-production:
     runs-on: [ "self-hosted", "jamf-ubuntu-latest" ]
@@ -87,9 +89,10 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: plan
-      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.0.0
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
       with:
         environment: ${{ matrix.environments }}
         action: plan
         gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
         gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
+        account_id: "992382493208"
