--- a/.github/workflows/terrugrunt-staging-prod-deploy.yml
+++ b/.github/workflows/terrugrunt-staging-prod-deploy.yml
@@ -46,12 +46,13 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: apply
-      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.0.0
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
       with:
         environment: ${{ matrix.environments }}
         action: apply
         gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
         gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
+        account_id: "851725295329"
 
   plan-production:
     environment: staging
@@ -64,12 +65,13 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: plan
-      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.0.0
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
       with:
         environment: ${{ matrix.environments }}
         action: plan
         gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
         gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
+        account_id: "992382493208"
 
   deploy-production:
     environment: production
@@ -82,9 +84,10 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: apply
-      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.0.0
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
       with:
         environment: ${{ matrix.environments }}
         action: apply
         gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
         gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
+        account_id: "992382493208"
