JSC-59106 argocd init

--- a/.github/workflows/terrugrunt-plan.yml
+++ b/.github/workflows/terrugrunt-plan.yml
@@ -3,6 +3,8 @@ run-name: ${{ github.actor }} planning to deploy 🚀
 
 on:
   pull_request:
+    paths:
+    - 'infrastructure/**'
 
 concurrency:
   group: ${{ github.workflow }}
