--- a/.github/workflows/terrugrunt-sbox-deploy.yml
+++ b/.github/workflows/terrugrunt-sbox-deploy.yml
@@ -3,6 +3,8 @@ run-name: ${{ github.actor }} deploying to Sbox 🚀
 on:
   pull_request:
     types: [ labeled ]
+    paths:
+    - 'infrastructure/**'
 
 concurrency:
   group: ${{ github.workflow }}
