JSC-59106 okta integration

--- a/charts/argocd/values-sbox.yaml
+++ b/charts/argocd/values-sbox.yaml
@@ -60,7 +60,6 @@ argo-cd:
         memory: 64Mi
 
   configs:
-    params:
-      server.insecure: true
     cm:
       url: https://argocd-infrastructure.sbox.jamf.build
+      admin.enabled: true
