--- a/stage/kubernetes-infrastructure.yaml
+++ b/stage/kubernetes-infrastructure.yaml
@@ -2,15 +2,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: kubernetes-infrastructure
-  namespace: argocd
+  namespace: argocd-infrastructure
 spec:
   project: default
   source:
     repoURL: https://github.com/wandera/kubernetes-infrastructure.git
     targetRevision: arogocd-chaos-poc
-    path: ./argocd-infrastructure-stage
+    path: ./infrastructure-argocd-infrastructure-stage
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: argocd-infrastructure
 #  syncPolicy:
 #    automated: {}
