--- a/charts/argocd/values-staging.yaml
+++ b/charts/argocd/values-staging.yaml
@@ -37,7 +37,7 @@ argo-cd:
         alb.ingress.kubernetes.io/target-type: instance
         alb.ingress.kubernetes.io/backend-protocol: HTTP
         alb.ingress.kubernetes.io/group.name: delta.internal
-        alb.ingress.kubernetes.io/tags: Environment=staging,Team=delta
+        alb.ingress.kubernetes.io/tags: Environment=stage,Team=delta
         alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":80}, {"HTTPS":443}]'
         alb.ingress.kubernetes.io/ssl-redirect: '443'
       aws:
