--- a/charts/argocd/templates/secrets.yaml
+++ b/charts/argocd/templates/secrets.yaml
@@ -4,10 +4,10 @@ metadata:
   name: cluster-{{ .Values.cluster.name }}
   labels:
     argocd.argoproj.io/secret-type: cluster
-    jamf.com/application: buildsvc
+    jamf.com/application: {{ .Values.cluster.application }}
     jamf.com/environment: {{ .Values.cluster.environment }}
-    jamf.com/cluster-type: eks
-    jamf.com/region: eu-central-1
+    jamf.com/cluster-type: {{ .Values.cluster.clusterType }}
+    jamf.com/region: {{ .Values.cluster.region }}
     {{- include "argocd.labels" . | nindent 4 }}
 type: Opaque
 stringData:
