--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -7,6 +7,8 @@ cluster:
   region: ""
   owner: "delta"
   externalSecretIAM: ""
+  clusterType: "eks"
+  application: "buildsvc"
 
 ingressExternal:
   enabled: false
