--- a/charts/argocd/templates/external-secrets.yaml
+++ b/charts/argocd/templates/external-secrets.yaml
@@ -1,71 +1,71 @@
-# ---
-# apiVersion: external-secrets.io/v1beta1
-# kind: ExternalSecret
-# metadata:
-#   name: {{ include "argocd.name" . }}-wandera-git
-#   namespace: {{ .Release.Namespace }}
-#   labels:
-#     {{- include "argocd.labels" . | nindent 4 }}
-# spec:
-#   refreshInterval: 3m
-#   secretStoreRef:
-#     name: argocd-secret-store
-#     kind: SecretStore
-#   target:
-#     name: {{ include "argocd.name" . }}-wandera-git ## K8s Secret Name
-#     creationPolicy: Owner
-#     template:
-#       metadata:
-#         labels:
-#           argocd.argoproj.io/secret-type: repo-creds
-#       data:
-#         url: https://github.com/wandera
-#         password: "{{ `{{ .password }}` }}"
-#         username: "{{ `{{ .username }}` }}"
-#   data:
-#   - secretKey: username
-#     remoteRef:
-#       key: argo/git/wandera-viewer
-#       property: username
-#   - secretKey: password
-#     remoteRef:
-#       key: argo/git/wandera-viewer
-#       property: password
-# ---
-# apiVersion: external-secrets.io/v1beta1
-# kind: ExternalSecret
-# metadata:
-#   name: {{ include "argocd.name" . }}-jamf-git
-#   namespace: {{ .Release.Namespace }}
-#   labels:
-#     {{- include "argocd.labels" . | nindent 4 }}
-# spec:
-#   refreshInterval: 3m
-#   secretStoreRef:
-#     name: argocd-secret-store
-#     kind: SecretStore
-#   target:
-#     name: {{ include "argocd.name" . }}-jamf-git ## K8s Secret Name
-#     creationPolicy: Owner
-#     template:
-#       metadata:
-#         labels:
-#           argocd.argoproj.io/secret-type: repo-creds
-#       data:
-#         url: https://github.com/jamf
-#         githubAppID: "{{ `{{ .githubAppID }}` }}"
-#         githubAppPrivateKey: "{{ `{{ .githubAppPrivateKey }}` }}"
-#         githubAppInstallationID: "{{ `{{ .githubAppInstallationID }}` }}"
-#   data:
-#     - secretKey: githubAppID
-#       remoteRef:
-#         key: argo/argowf/github-app
-#         property: githubAppID
-#     - secretKey: githubAppPrivateKey
-#       remoteRef:
-#         key: argo/argowf/github-app
-#         property: githubAppPrivateKey
-#     - secretKey: githubAppInstallationID
-#       remoteRef:
-#         key: argo/argowf/github-app
-#         property: githubAppInstallationID
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: {{ include "argocd.name" . }}-wandera-git
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "argocd.labels" . | nindent 4 }}
+spec:
+  refreshInterval: 3m
+  secretStoreRef:
+    name: argocd-secret-store
+    kind: SecretStore
+  target:
+    name: {{ include "argocd.name" . }}-wandera-git ## K8s Secret Name
+    creationPolicy: Owner
+    template:
+      metadata:
+        labels:
+          argocd.argoproj.io/secret-type: repo-creds
+      data:
+        url: https://github.com/wandera
+        password: "{{ `{{ .password }}` }}"
+        username: "{{ `{{ .username }}` }}"
+  data:
+  - secretKey: username
+    remoteRef:
+      key: /argocd/infrastructure/wandera-git-${local.env_vars.locals.tags.environment}
+      property: username
+  - secretKey: password
+    remoteRef:
+      key: /argocd/infrastructure/wandera-git-${local.env_vars.locals.tags.environment}
+      property: password
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: {{ include "argocd.name" . }}-jamf-git
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "argocd.labels" . | nindent 4 }}
+spec:
+  refreshInterval: 3m
+  secretStoreRef:
+    name: argocd-secret-store
+    kind: SecretStore
+  target:
+    name: {{ include "argocd.name" . }}-jamf-git ## K8s Secret Name
+    creationPolicy: Owner
+    template:
+      metadata:
+        labels:
+          argocd.argoproj.io/secret-type: repo-creds
+      data:
+        url: https://github.com/jamf
+        githubAppID: "{{ `{{ .githubAppID }}` }}"
+        githubAppPrivateKey: "{{ `{{ .githubAppPrivateKey }}` }}"
+        githubAppInstallationID: "{{ `{{ .githubAppInstallationID }}` }}"
+  data:
+    - secretKey: githubAppID
+      remoteRef:
+        key: /argocd/infrastructure/jamf-git-${local.env_vars.locals.tags.environment}
+        property: githubAppID
+    - secretKey: githubAppPrivateKey
+      remoteRef:
+        key: /argocd/infrastructure/jamf-git-${local.env_vars.locals.tags.environment}
+        property: githubAppPrivateKey
+    - secretKey: githubAppInstallationID
+      remoteRef:
+        key: /argocd/infrastructure/jamf-git-${local.env_vars.locals.tags.environment}
+        property: githubAppInstallationID
