JSC-59238 configure external secrets

--- a/charts/argocd/templates/external-secret-sa.yaml
+++ b/charts/argocd/templates/external-secret-sa.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "argocd.name" . }}-externalsecrets
-  namespace: argocd
+  namespace: {{ .Release.Namespace }}
   labels:
     jamf.com/application: buildsvc
     jamf.com/environment: {{ .Values.cluster.environment }}
