--- a/charts/argocd/templates/external-secret-store.yaml
+++ b/charts/argocd/templates/external-secret-store.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: {{ include "argocd.name" . }}-secret-store
-  namespace: "argocd"
+  namespace: {{ .Release.Namespace }}
   labels:
     jamf.com/application: buildsvc
     jamf.com/environment: {{ .Values.cluster.environment }}
@@ -17,4 +17,4 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: argocd-externalsecrets
+            name: {{ include "argocd.name" . }}-externalsecrets
