--- a/charts/argocd/templates/external-secrets.yaml
+++ b/charts/argocd/templates/external-secrets.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   refreshInterval: 3m
   secretStoreRef:
-    name: argocd-secret-store
+    name: {{ include "argocd.name" . }}-secret-store
     kind: SecretStore
   target:
     name: {{ include "argocd.name" . }}-wandera-git ## K8s Secret Name
@@ -42,7 +42,7 @@ metadata:
 spec:
   refreshInterval: 3m
   secretStoreRef:
-    name: argocd-secret-store
+    name: {{ include "argocd.name" . }}-secret-store
     kind: SecretStore
   target:
     name: {{ include "argocd.name" . }}-jamf-git ## K8s Secret Name
