JSC-59238 fix names and namespace

--- a/charts/argocd/templates/external-secrets.yaml
+++ b/charts/argocd/templates/external-secrets.yaml
@@ -25,11 +25,11 @@ spec:
   data:
   - secretKey: username
     remoteRef:
-      key: /argocd/infrastructure/wandera-git-${local.env_vars.locals.tags.environment}
+      key: /argocd/infrastructure/wandera-git
       property: username
   - secretKey: password
     remoteRef:
-      key: /argocd/infrastructure/wandera-git-${local.env_vars.locals.tags.environment}
+      key: /argocd/infrastructure/wandera-git
       property: password
 ---
 apiVersion: external-secrets.io/v1beta1
@@ -59,13 +59,13 @@ spec:
   data:
     - secretKey: githubAppID
       remoteRef:
-        key: /argocd/infrastructure/jamf-git-${local.env_vars.locals.tags.environment}
+        key: /argocd/infrastructure/jamf-git
         property: githubAppID
     - secretKey: githubAppPrivateKey
       remoteRef:
-        key: /argocd/infrastructure/jamf-git-${local.env_vars.locals.tags.environment}
+        key: /argocd/infrastructure/jamf-git
         property: githubAppPrivateKey
     - secretKey: githubAppInstallationID
       remoteRef:
-        key: /argocd/infrastructure/jamf-git-${local.env_vars.locals.tags.environment}
+        key: /argocd/infrastructure/jamf-git
         property: githubAppInstallationID
