--- a/.github/workflows/terrugrunt-sbox-deploy.yml
+++ b/.github/workflows/terrugrunt-sbox-deploy.yml
@@ -2,7 +2,11 @@ run-name: ${{ github.actor }} deploying to Sbox 🚀
 
 on:
   pull_request:
-    types: [ labeled ]
+    types:
+    - labeled
+    - opened
+    - reopened
+    - synchronize
     paths:
     - 'infrastructure/**'
 
@@ -42,7 +46,7 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: apply
-      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.0
       with:
         environment: ${{ matrix.environments }}
         action: apply
