--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -26,7 +26,7 @@ argo-cd:
       application.resourceTrackingMethod: annotation
 
   redis:
-    enabled: true
+    enabled: false
 
   redis-ha:
     enabled: false
