JSC-59238 add recovery window for password

--- a/charts/argocd/templates/external-secret-store.yaml
+++ b/charts/argocd/templates/external-secret-store.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   provider:
     aws:
-      service: ParameterStore
+      service: SecretsManager
       region: {{ .Values.cluster.region }}
       auth:
         jwt:
