--- a/.github/workflows/terrugrunt-plan-and-sbox-deploy.yml
+++ b/.github/workflows/terrugrunt-plan-and-sbox-deploy.yml
@@ -1,8 +1,13 @@
-name: 'Terragrunt plan'
-run-name: ${{ github.actor }} planning to deploy 🚀
+name: 'Terragrunt plan and conditional sbox deploy'
+run-name: ${{ github.actor }} running Terragrunt plan for all envs and a condidtional sbox deploy 🚀
 
 on:
   pull_request:
+    types:
+    - labeled
+    - opened
+    - reopened
+    - synchronize
     paths:
     - 'infrastructure/**'
 
@@ -27,17 +32,17 @@ jobs:
     - name: Checkout the repository to the runner
       uses: actions/checkout@v4
     - name: Output sbox environments
-      uses: jamf/github-actions-terragrunt/discover-environments@v1.0.0
+      uses: jamf/github-actions-terragrunt/discover-environments@v1.2.1
       id: list-sbox-environments
       with:
         environment: sbox
     - name: Output staging environments
-      uses: jamf/github-actions-terragrunt/discover-environments@v1.0.0
+      uses: jamf/github-actions-terragrunt/discover-environments@v1.2.1
       id: list-staging-environments
       with:
         environment: staging
     - name: Output production environments
-      uses: jamf/github-actions-terragrunt/discover-environments@v1.0.0
+      uses: jamf/github-actions-terragrunt/discover-environments@v1.2.1
       id: list-production-environments
       with:
         environment: production
@@ -98,3 +103,23 @@ jobs:
         gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
         gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
         account_id: "992382493208"
+
+  deploy-sbox:
+    name: Deploy to Sbox
+    if: contains(github.event.pull_request.labels.*.name, 'deploy to sbox')
+    runs-on: [ "self-hosted", "jamf-ubuntu-latest" ]
+    needs: ["discover-environments", "plan-sbox"]
+    strategy:
+      matrix: ${{ fromJson(needs.discover-environments.outputs.sbox-environments) }}
+      fail-fast: false
+    steps:
+    - name: 'Checkout'
+      uses: actions/checkout@v4
+    - name: apply
+      uses: jamf/github-actions-terragrunt/terragrunt-action@v1.2.1
+      with:
+        environment: ${{ matrix.environments }}
+        action: apply
+        gh_app_secret: ${{ secrets.GH_APP_INFRA_MODULES_PRIVATE_KEY }}
+        gh_app_id: ${{ secrets.GH_APP_INFRA_MODULES_ID }}
+        account_id: "082372472775"
