--- a/.github/workflows/terrugrunt-plan.yml
+++ b/.github/workflows/terrugrunt-plan.yml
@@ -63,7 +63,7 @@ jobs:
         account_id: "082372472775"
 
   plan-staging:
-    if: ${{ needs.discover-environments.outputs.sbox-environments != 'empty' }}
+    if: ${{ needs.discover-environments.outputs.staging-environments != 'empty' }}
     runs-on: [ "self-hosted", "jamf-ubuntu-latest" ]
     needs: discover-environments
     strategy:
@@ -84,7 +84,7 @@ jobs:
   plan-production:
     runs-on: [ "self-hosted", "jamf-ubuntu-latest" ]
     needs: discover-environments
-    if: ${{ needs.discover-environments.outputs.sbox-environments != 'empty' }}
+    if: ${{ needs.discover-environments.outputs.production-environments != 'empty' }}
     strategy:
       matrix: ${{ fromJson(needs.discover-environments.outputs.production-environments) }}
       fail-fast: false
