JSC-59323 use redis on staging and prod

--- a/charts/argocd/templates/external-secrets.yaml
+++ b/charts/argocd/templates/external-secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ include "argocd.name" . }}-wandera-git
+  name: wandera-viewer-git
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "argocd.labels" . | nindent 4 }}
@@ -12,7 +12,7 @@ spec:
     name: {{ include "argocd.name" . }}-secret-store
     kind: SecretStore
   target:
-    name: {{ include "argocd.name" . }}-wandera-git ## K8s Secret Name
+    name: wandera-viewer-git
     creationPolicy: Owner
     template:
       metadata:
@@ -35,7 +35,7 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ include "argocd.name" . }}-jamf-git
+  name: jamf-viewer-git
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "argocd.labels" . | nindent 4 }}
@@ -45,7 +45,7 @@ spec:
     name: {{ include "argocd.name" . }}-secret-store
     kind: SecretStore
   target:
-    name: {{ include "argocd.name" . }}-jamf-git ## K8s Secret Name
+    name: jamf-viewer-git
     creationPolicy: Owner
     template:
       metadata:
