JSC-59443 grant readonly toEngineering - All Staff

--- a/charts/argocd/values-production.yaml
+++ b/charts/argocd/values-production.yaml
@@ -89,8 +89,8 @@ argo-cd:
             emailAttr: email
             groupsAttr: group
     rbac:
-      policy.default: read-only
       policy.csv: |
+        g, Engineering - All Staff, role:readonly
         p, role:applications-sync, applications, sync, *, allow
         g, Wandera - Delta Team, role:admin
       scopes: '[email,groups]'
