JSC-59285 Enable application labels for argocd metrics

--- a/charts/argocd/values-production.yaml
+++ b/charts/argocd/values-production.yaml
@@ -19,6 +19,11 @@ argo-cd:
     serviceAccount:
       annotations:
         eks.amazonaws.com/role-arn: arn:aws:iam::992382493208:role/argocd-infrastructure-cluster-production
+    metrics:
+      applicationLabels:
+        enabled: true
+        labels:
+        - team
 
   externalRedis:
     host: argocd-infra-production-redis-001.kpuxat.0001.euc1.cache.amazonaws.com
