--- a/charts/argocd/templates/default-project.yaml
+++ b/charts/argocd/templates/default-project.yaml
@@ -26,4 +26,4 @@ spec:
     - "k8s-team"
     policies:
     - p, proj:default:owner, applications, *, default/*, allow
-    - p, proj:observability:owner, repositories, get, *, allow
+    - p, proj:default:owner, repositories, get, *, allow
