TRIVIAL Add applications-deleter user
For testing purposes of Arturo

--- a/charts/argocd/values-production.yaml
+++ b/charts/argocd/values-production.yaml
@@ -95,8 +95,12 @@ argo-cd:
             usernameAttr: email
             emailAttr: email
             groupsAttr: group
+      accounts.applications-deleter: apiKey
     rbac:
       policy.csv: |
         g, Engineering - All Staff, role:readonly
         g, Wandera - Delta Team, role:admin
+        # For testing purposes only (requested by Arturo Noha)
+        p, role:applications-delete, applications, delete, *-chaos-zb-*, allow
+        g, applications-deleter, role:applications-delete
       scopes: '[email,groups]'
