TRIVIAL Add get permissions to applications-deleter user

--- a/charts/argocd/values-production.yaml
+++ b/charts/argocd/values-production.yaml
@@ -101,6 +101,7 @@ argo-cd:
         g, Engineering - All Staff, role:readonly
         g, Wandera - Delta Team, role:admin
         # For testing purposes only (requested by Arturo Noha)
+        p, role:applications-delete, applications, get, *-chaos-zb-*, allow
         p, role:applications-delete, applications, delete, *-chaos-zb-*, allow
         g, applications-deleter, role:applications-delete
       scopes: '[email,groups]'
