--- a/charts/argocd/values-production.yaml
+++ b/charts/argocd/values-production.yaml
@@ -95,13 +95,12 @@ argo-cd:
             usernameAttr: email
             emailAttr: email
             groupsAttr: group
-      accounts.applications-deleter: apiKey
+      accounts.applications-deleter: apiKey  # used by chaos automation to clean up apps after decommissioning of the cluster
     rbac:
       policy.csv: |
         g, Engineering - All Staff, role:readonly
         g, Wandera - Delta Team, role:admin
-        # For testing purposes only (requested by Arturo Noha)
-        p, role:applications-delete, applications, get, *-chaos-zb-*, allow
-        p, role:applications-delete, applications, delete, *-chaos-zb-*, allow
+        p, role:applications-delete, applications, get, *, allow
+        p, role:applications-delete, applications, delete, *, allow
         g, applications-deleter, role:applications-delete
       scopes: '[email,groups]'
