--- a/charts/argocd/values-staging.yaml
+++ b/charts/argocd/values-staging.yaml
@@ -38,8 +38,7 @@ argo-cd:
       enabled: true
       controller: aws
       ingressClassName: alb
-      hosts:
-      - "argocd-infrastructure.staging.jamf.build"
+      hostname: "argocd-infrastructure.staging.jamf.build"
       annotations:
         alb.ingress.kubernetes.io/scheme: internal
         alb.ingress.kubernetes.io/target-type: instance
