--- a/sbox/_self.yaml
+++ b/sbox/_self.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/jamf/argocd-infrastructure.git
-    targetRevision: HEAD
+    targetRevision: JSC-58687-argocd-upgrade
     path: ./sbox
   destination:
     server: https://kubernetes.default.svc
