--- a/sbox/argocd.yaml
+++ b/sbox/argocd.yaml
@@ -13,7 +13,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/jamf/argocd-infrastructure.git
-    targetRevision: JSC-58687-argocd-upgrade
+    targetRevision: HEAD
     path: 'charts/argocd'
     helm:
       valueFiles:
